--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "University of Agder"
   pubmed           :
   googlescholar    :
-  email            : "hntien.hcmut@gmail.com"
+  email            : "hntien.hcmut@gmail.com", "tiennh@uia.no"
   researchgate     :  
   uri              :
   bitbucket        :
