--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "University of Agder"
   pubmed           :
   googlescholar    :
-  email            : "hntien.hcmut@gmail.com", "tiennh@uia.no"
+  email            : "hntien.hcmut@gmail.com"
   researchgate     :  
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "Tien Ngoc Ha"
   orcid            :
   pinterest        :
   soundcloud       :
