--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/tien-ngoc-ha-8b54901aa/"
+  linkedin         :
   orcid            :
   pinterest        :
   soundcloud       :
