--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tien Ngoc Ha"
-  avatar           : "profile.png"
+  avatar           : "avatar.jpeg"
   bio              : "PhD Research Fellow at University of Agder"
   location         : "Grimstad, Norway"
   employer         : "University of Agder"
