--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : 
   lastfm           :
   linkedin         :
-  orcid            :
+  orcid            : "https://orcid.org/0009-0006-9618-9080"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
