--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ collections:
   # teaching:
   #   output: true
   #   permalink: /:collection/:path/
-  Publications:
+  publications:
     output: true
     permalink: /:collection/:path/
   # portfolio:
